--- a/package.json
+++ b/package.json
@@ -4,14 +4,28 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/server.ts",
+    "test": "jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "dependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ts-jest": "^26.5.6",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
